Bootstrap components replaced with Material UI

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="settings.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Economica&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
       <link rel="stylesheet" href="Login-Form-Clean.css">
       <link rel="stylesheet" href="fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="Contact-Form-Clean.css">
